hydroflow/tests/compile-fail/surface_syntax_paren_semicolon.stderr
error: unexpected token
 --> tests/compile-fail/surface_syntax_paren_semicolon.rs:5:28
  |
5 |         (source_iter(0..10););
  |                            ^
